<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="mainViewModel"
            type="com.decode.udemyfoodapp.viewmodels.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightGray"
        tools:context=".ui.fragments.recipes.RecipesFragment">

        <com.cooltechworks.views.shimmer.ShimmerRecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="8dp"
            android:orientation="vertical"
            app:shimmer_demo_child_count="4"
            app:shimmer_demo_layout="@layout/placeholder_row_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/recipes_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:clickable="true"
            android:backgroundTint="@color/colorAccent"
            app:tint="@color/white"
            android:src="@drawable/baseline_restaurant"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:focusable="true"
            android:contentDescription="@string/recipes" />

        <ImageView
            android:id="@+id/error_imageView"
            readApiResponse="@{mainViewModel.recipesResponse}"
            readDatabase="@{mainViewModel.databaseRecipes}"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:alpha="0.5"
            android:contentDescription="@string/error_image"
            android:src="@drawable/baseline_wifi"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/recyclerview"
            app:layout_constraintVertical_bias="0.37" />

        <TextView
            android:id="@+id/error_textView"
            readApiResponse="@{mainViewModel.recipesResponse}"
            readDatabase="@{mainViewModel.databaseRecipes}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:alpha="0.5"
            android:fontFamily="sans-serif"
            android:text="@string/no_internet_connection"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/error_imageView"
            app:layout_constraintStart_toStartOf="@+id/error_imageView"
            app:layout_constraintTop_toBottomOf="@+id/error_imageView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>