<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="result"
            type="com.decode.udemyfoodapp.models.Result" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/row_cardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/lightMediumGray"
            app:strokeWidth="1dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white">

                <ImageView
                    android:id="@+id/recipe_imageView"
                    android:layout_width="200dp"
                    android:layout_height="0dp"
                    android:scaleType="centerCrop"
                    app:loadImage="@{result.image}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@tools:sample/avatars"
                    android:contentDescription="@string/food" />

                <TextView
                    android:id="@+id/title_textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/alata"
                    android:maxLines="2"
                    android:text="@{result.title}"
                    android:textColor="@color/darker"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/recipe_imageView"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/description_textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif"
                    android:maxLines="3"
                    android:text="@{result.summary}"
                    android:textColor="@color/darkGray"
                    app:layout_constraintEnd_toEndOf="@+id/title_textView"
                    app:layout_constraintStart_toStartOf="@+id/title_textView"
                    app:layout_constraintTop_toBottomOf="@+id/title_textView" />

                <ImageView
                    android:id="@+id/heart_imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="36dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/heart_textView"
                    app:layout_constraintStart_toStartOf="@+id/heart_textView"
                    app:layout_constraintTop_toBottomOf="@+id/description_textView"
                    app:srcCompat="@drawable/baseline_heart"
                    app:tint="@color/colorAccent"
                    android:contentDescription="@string/like" />

                <TextView
                    android:id="@+id/heart_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:textAlignment="center"
                    android:text="@{String.valueOf(result.aggregateLikes)}"
                    app:layout_constraintStart_toStartOf="@+id/description_textView"
                    app:layout_constraintTop_toBottomOf="@+id/heart_imageView" />

                <ImageView
                    android:id="@+id/clock_imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:tint="@color/yellow"
                    app:layout_constraintEnd_toEndOf="@+id/clock_textView"
                    app:layout_constraintStart_toStartOf="@+id/clock_textView"
                    app:layout_constraintTop_toTopOf="@+id/heart_imageView"
                    app:srcCompat="@drawable/baseline_clock"
                    android:contentDescription="@string/clock" />

                <TextView
                    android:id="@+id/clock_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:textAlignment="center"
                    android:text="@{String.valueOf(result.readyInMinutes)}"
                    android:textColor="@color/yellow"
                    app:layout_constraintStart_toEndOf="@+id/heart_textView"
                    app:layout_constraintTop_toBottomOf="@+id/clock_imageView" />

                <ImageView
                    android:id="@+id/leaf_imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    applyVeganColor="@{result.vegan}"
                    app:layout_constraintEnd_toEndOf="@+id/leaf_textView"
                    app:layout_constraintStart_toStartOf="@+id/leaf_textView"
                    app:layout_constraintTop_toTopOf="@+id/clock_imageView"
                    app:srcCompat="@drawable/baseline_flower"
                    android:contentDescription="@string/vegan" />

                <TextView
                    android:id="@+id/leaf_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    applyVeganColor="@{result.vegan}"
                    android:text="@string/vegan"
                    android:textAlignment="center"
                    app:layout_constraintStart_toEndOf="@+id/clock_textView"
                    app:layout_constraintTop_toBottomOf="@+id/leaf_imageView" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>